tests/baselines/reference/taggedTemplateStringsWithGenericStringParts.errors.txt
tests/cases/conformance/es6/templates/taggedTemplateStringsWithGenericStringParts.ts(26,21): error TS2345: Argument of type 'undefined[]' is not assignable to parameter of type 'never'.
tests/cases/conformance/es6/templates/taggedTemplateStringsWithGenericStringParts.ts(28,20): error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.


==== tests/cases/conformance/es6/templates/taggedTemplateStringsWithGenericStringParts.ts (2 errors) ====
    type DataTypes = 'string'|'number'|'boolean';
    
    interface DataTypesToTypeScriptType {
      string: string;
      number: number;
      boolean: boolean;
    }
    
    type ArgsFor<TParts extends readonly unknown[]> =
        TParts extends [infer THead, ...infer TTail]
            ? THead extends DataTypes
                ? [DataTypesToTypeScriptType[THead], ...ArgsFor<TTail>]
                : [never, ...ArgsFor<TTail>]
            : []
    
    declare function dataTypes<TParts extends readonly string[], TArgs extends ArgsFor<TParts>>(
      parts: TemplateStringsArray<readonly [...TParts, '']>,
      ...args: TArgs): unknown;
    
    dataTypes `string${'abc'}`;
    
    dataTypes `number${5}`;
    
    dataTypes `boolean${true}`;
    
    dataTypes `unknown${[]}`;
                        ~~
!!! error TS2345: Argument of type 'undefined[]' is not assignable to parameter of type 'never'.
    
    dataTypes `string${3}`;
                       ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
    
    dataTypes `string${'abc'}string${'def'}number${10}boolean${false}`;
    